--- a/resources/templates/map/index.html
+++ b/resources/templates/map/index.html
@@ -50,7 +50,7 @@
 							 <br>
 							 <br>
                              
-                              <script src="http://maps.google.com/maps/api/js?key=AIzaSyCtPm_1RFZHhvrBw95zXKoCHwbba26HJqw&language=ja"></script>
+                              <script src="https://maps.google.com/maps/api/js?key=AIzaSyCtPm_1RFZHhvrBw95zXKoCHwbba26HJqw&language=ja"></script>
                             
         <div id="map"></div>
 
