--- a/resources/templates/user/edit.html
+++ b/resources/templates/user/edit.html
@@ -103,6 +103,87 @@
                                          <input type="text" class="form-control" th:field="*{phoneNumber}" autocomplete="tel-national" placeholder="090-1234-5678">                                
                                      </div>
                                  </div>
+                                 
+                                 <div class="form-group row mb-3">
+                                     <div class="col-md-5">
+                                         <label for="birthday" class="col-form-label text-md-left fw-bold">
+                                              <div class="d-flex align-items-center">
+                                                  <span class="me-1">誕生日</span>
+                                              </div>
+                                         </label>
+                                     </div>
+                                    <div class="col-md-2">
+                                     <select class="form-select" aria-label="Default select example" th:field="*{birthmonth}">
+                                      <option value="" selected></option>
+                                      <option value="1">1</option>
+                                      <option value="2">2</option>
+                                      <option value="3">3</option>
+                                      <option value="4">4</option>
+                                      <option value="5">5</option>
+                                      <option value="6">6</option>
+                                      <option value="7">7</option>
+                                      <option value="8">8</option>
+                                      <option value="9">9</option>
+                                      <option value="10">10</option>
+                                      <option value="11">11</option>
+                                      <option value="12">12</option>
+                                       </select>
+                                    </div>
+                                    <div class="col-md-2">
+										
+                                     <select class="form-select" aria-label="Default select example"　th:field="*{birthday}">
+                                     <option value="" selected></option>
+                                     <option value="1">1</option>
+                                     <option value="2">2</option>
+                                    <option value="3">3</option>
+                                     <option value="4">4</option>
+                                     <option value="5">5</option>
+                                     <option value="6">6</option>
+                                     <option value="7">7</option>
+                                     <option value="8">8</option>
+                                     <option value="9">9</option>
+                                     <option value="10">10</option>
+                                     <option value="11">11</option>
+                                     <option value="12">12</option>
+                                     <option value="13">13</option>
+                                     <option value="14">14</option>
+                                     <option value="15">15</option>
+                                    <option value="16">16</option>
+                                    <option value="17">17</option>
+                                   <option value="18">18</option>
+                                    <option value="19">19</option>
+                                    <option value="20">20</option>
+                                    <option value="21">21</option>
+                                    <option value="22">22</option>
+<option value="23">23</option>
+<option value="24">24</option>
+<option value="25">25</option>
+<option value="26">26</option>
+<option value="27">27</option>
+<option value="28">28</option>
+<option value="29">29</option>
+<option value="30">30</option>
+<option value="31">31</option>
+</select>　
+                                    </div>
+
+                                 </div>
+                                 <div class="form-group row mb-3">
+                                     <div class="col-md-5">
+                                         <label for="gender" class="col-form-label text-md-left fw-bold">
+                                              <div class="d-flex align-items-center">
+                                                  <span class="me-1">性別</span>
+                                              </div>
+                                         </label>
+                                     </div>
+                                    <div class="col-md-2">
+                                     <select class="form-select" aria-label="Default select example" th:field="*{gender}">
+                                     <option value="" selected></option>
+                                     <option value="男性">男性</option>
+                                    <option value="女性">女性</option>
+                                    </select>
+                                                      </div>
+                                 </div>
                                                                                                                          
                                  <div class="form-group row mb-3">
                                      <div class="col-md-5">
